# llm_typo_tolerance

./: .gitignore  README.md  config.yaml  pyproject.toml
data/: source.csv  typos.csv
dev/: pinyin_test.py
src/: config.yaml  find_local_models.py  keyboard_dict.py  llm_scoring.py  plots.py  typo_generator.py
