[project]
name = "llm-typo-tolerance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "langchain-ollama>=1.0.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pypinyin>=0.55.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
